stretch/manifests/base/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cloud-native-101-gateway
  namespace: cloud-native-101
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: cloud-native-101-route
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cloud-native-101-route
  namespace: cloud-native-101
  labels:
    app: cloud-native-101-route
spec:
  parentRefs:
    - name: cloud-native-101-gateway
  hostnames:
    - "*"
  rules:
    - matches:
        - path:
            type: Prefix
            value: "/"
      backendRefs:
        - name: cloud-native-101
          port: 80
